<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/b2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="5sp"
            app:cardBackgroundColor="#35CEFF"
            app:cardElevation="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resume"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            app:cardBackgroundColor="#579BED"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/personal_details"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/edtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edtbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:inputType="date"
            android:importantForAutofill="no"
            android:textColorHint="#8D6E63" />

        <EditText
            android:id="@+id/edtcnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact"
            android:inputType="number"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/edtmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail_id"
            android:inputType="textEmailAddress"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/edtadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:autofillHints=""
            android:textColorHint="#8D6E63"
            tools:ignore="TextFields" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            app:cardBackgroundColor="#579BED"
            android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eduction"
            android:textSize="20sp"
            android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/edtdegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/degree"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextContrastCheck,TextFields" />

        <EditText
            android:id="@+id/edthigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/high_school"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edtclg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/collage_univarsity_school"
            android:importantForAutofill="no"
            android:textColorHint="#8D6E63"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edtpassy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passing_year"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#8D6E63" />

        <EditText
            android:id="@+id/edtpr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/percentage_cgpa"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#8D6E63" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            app:cardBackgroundColor="#579BED"
            android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/laungage"
            android:textSize="20sp"
            android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/edtl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/laungage1"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edtl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/laungage2"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/edtl3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/laungage3"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextFields" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            app:cardBackgroundColor="#579BED"
            android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/skill"
            android:textSize="20sp"
            android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/edts1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skill1"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/edts2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skill2"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/edts3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skill3"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TextFields" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            app:cardBackgroundColor="#579BED"
            android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby"
            android:textSize="20sp"
            android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <EditText

            android:id="@+id/edth1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hobby1"
            android:importantForAutofill="no"
            android:textColorHint="#8D6E63"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edth2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hobby2"
            android:autofillHints=""
            android:textColorHint="#8D6E63"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edth3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hobby3"
            android:autofillHints=""
            android:textColorHint="#8D6E63"
            tools:ignore="TextFields" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            app:cardBackgroundColor="#579BED"
            android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objective"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"/>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/edtobj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/objective1"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp"
            app:cardBackgroundColor="#579BED"
            android:layout_gravity="center">

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:backgroundTint="#5690D8"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>