<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FourthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="#1D0643"
        android:gravity="center">

        <TextView
            android:id="@+id/edtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#6E480A"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:gravity="center"
                android:text="@string/contact"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/phoneLogo"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/edtcnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/mailLogo"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/edtmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/addLogo"
                    android:textColor="#DD2C00"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/edtadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:gravity="center"
                android:text="@string/eduction"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/s_s_c_h_s_c"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edthigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/degree"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edtdegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/collage_univarsity_school"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edtclg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/passing_year"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edtpassy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/percentage_cgpa"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edtpr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:textSize="15sp" />


        </LinearLayout>

        <View
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/birth_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edtbirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_marginTop="10sp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintBounds" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/objective"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edtobj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/skill"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edts1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:id="@+id/edts2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:id="@+id/edts3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/hobby"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edth1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:id="@+id/edth2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:id="@+id/edth3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/laungage"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edtl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:id="@+id/edtl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />

            <TextView
                android:id="@+id/edtl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
